...
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.smartparkingsystem.ui.signup.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_signUpFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>
</navigation>
