...
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.smartparkingsystem.ui.signin.SignInFragment"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_signInFragment_to_locationAccessFragment"
            app:destination="@id/locationAccessFragment" />
        <action
            android:id="@+id/action_signInFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
...
